// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="default_input"
      title="default"
    >
      default
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="default_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="default_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.allowClear: false 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.allowClear: false_input"
      title="properties.allowClear: false"
    >
      properties.allowClear: false
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.allowClear: false_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.allowClear: false_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.autoFocus: true 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.autoFocus: true_input"
      title="properties.autoFocus: true"
    >
      properties.autoFocus: true
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.autoFocus: true_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                autoFocus={true}
                id="properties.autoFocus: true_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.disabled: true 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.disabled: true_input"
      title="properties.disabled: true"
    >
      properties.disabled: true
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.disabled: true_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]} ant-picker-disabled"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                disabled={true}
                id="properties.disabled: true_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.disabledDates.dates 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.disabledDates.dates_input"
      title="properties.disabledDates.dates"
    >
      properties.disabledDates.dates
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.disabledDates.dates_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.disabledDates.dates_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.disabledDates.max 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.disabledDates.max_input"
      title="properties.disabledDates.max"
    >
      properties.disabledDates.max
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.disabledDates.max_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.disabledDates.max_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.disabledDates.min 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.disabledDates.min_input"
      title="properties.disabledDates.min"
    >
      properties.disabledDates.min
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.disabledDates.min_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.disabledDates.min_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.disabledDates.ranges 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.disabledDates.ranges_input"
      title="properties.disabledDates.ranges"
    >
      properties.disabledDates.ranges
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.disabledDates.ranges_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.disabledDates.ranges_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.format: YYYY-MMMM-DD 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.format: YYYY-MMMM-DD_input"
      title="properties.format: YYYY-MMMM-DD"
    >
      properties.format: YYYY-MMMM-DD
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.format: YYYY-MMMM-DD_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.format: YYYY-MMMM-DD_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={14}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.inputStyle: CSS style applied 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.inputStyle: CSS style applied_input"
      title="properties.inputStyle: CSS style applied"
    >
      properties.inputStyle: CSS style applied
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.inputStyle: CSS style applied_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},{\\"border\\":\\"1px solid red\\"}]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.inputStyle: CSS style applied_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.label align: right 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.label align: right_input"
      title="properties.label align: right"
    >
      properties.label align: right
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.label align: right_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.label align: right_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.label colon: true 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.label colon: true_input"
      title="properties.label colon: true"
    >
      properties.label colon: true
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.label colon: true_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.label colon: true_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.label disabled: true 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.label disabled: true_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.label disabled: true_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.label extra: extra text added 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.label extra: extra text added_input"
      title="properties.label extra: extra text added"
    >
      properties.label extra: extra text added
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.label extra: extra text added_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.label extra: extra text added_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-form-item-extra {\\"style\\":[{\\"marginTop\\":0},null]}"
    >
      extra text added
    </div>
  </div>
</div>
`;

exports[`Render properties.label inline: true 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{\\"flexWrap\\":\\"inherit\\"}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left"
    style={
      Object {
        "flex": "0 1 auto",
      }
    }
  >
    <label
      className="{}"
      htmlFor="properties.label inline: true_input"
      title="properties.label inline: true"
    >
      properties.label inline: true
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control"
    style={
      Object {
        "flex": "1 1 auto",
      }
    }
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.label inline: true_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.label inline: true_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.label span: 12 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.label span: 12_input"
      title="properties.label span: 12"
    >
      properties.label span: 12
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.label span: 12_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.label span: 12_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.placeholder: - Select this Date 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.placeholder: - Select this Date_input"
      title="properties.placeholder: - Select this Date"
    >
      properties.placeholder: - Select this Date
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.placeholder: - Select this Date_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.placeholder: - Select this Date_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select this Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.showToday: true 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.showToday: true_input"
      title="properties.showToday: true"
    >
      properties.showToday: true
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.showToday: true_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.showToday: true_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.size: small 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.size: small_input"
      title="properties.size: small"
    >
      properties.size: small
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.size: small_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]} ant-picker-small"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.size: small_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.suffixIcon: CalendarTwoTone 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.suffixIcon: CalendarTwoTone_input"
      title="properties.suffixIcon: CalendarTwoTone"
    >
      properties.suffixIcon: CalendarTwoTone
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.suffixIcon: CalendarTwoTone_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.suffixIcon: CalendarTwoTone_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
              <span
                className="ant-picker-suffix"
              >
                <span
                  aria-label="loading-3-quarters"
                  className="anticon anticon-loading-3-quarters {}"
                  content={Object {}}
                  id="undefined_id"
                  list={Array []}
                  menus={Array []}
                  role="img"
                  user={Object {}}
                  validate={Array []}
                >
                  <svg
                    aria-hidden="true"
                    className="anticon-spin"
                    data-icon="loading-3-quarters"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.title 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.title_input"
      title="DateSelector title"
    >
      DateSelector title
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="{\\"style\\":{\\"width\\":\\"100%\\"}}"
        >
          <div
            id="properties.title_popup"
          />
          <div
            className="ant-picker {\\"style\\":[{\\"width\\":\\"100%\\"},null]}"
            onMouseUp={[Function]}
          >
            <div
              className="ant-picker-input"
            >
              <input
                autoComplete="off"
                id="properties.title_input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                placeholder="Select Date"
                readOnly={true}
                size={12}
                title=""
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.allowClear: false 1`] = `true`;

exports[`Test Schema properties.allowClear: false 2`] = `null`;

exports[`Test Schema properties.autoFocus: true 1`] = `true`;

exports[`Test Schema properties.autoFocus: true 2`] = `null`;

exports[`Test Schema properties.disabled: true 1`] = `true`;

exports[`Test Schema properties.disabled: true 2`] = `null`;

exports[`Test Schema properties.disabledDates.dates 1`] = `true`;

exports[`Test Schema properties.disabledDates.dates 2`] = `null`;

exports[`Test Schema properties.disabledDates.max 1`] = `true`;

exports[`Test Schema properties.disabledDates.max 2`] = `null`;

exports[`Test Schema properties.disabledDates.min 1`] = `true`;

exports[`Test Schema properties.disabledDates.min 2`] = `null`;

exports[`Test Schema properties.disabledDates.ranges 1`] = `true`;

exports[`Test Schema properties.disabledDates.ranges 2`] = `null`;

exports[`Test Schema properties.format: YYYY-MMMM-DD 1`] = `true`;

exports[`Test Schema properties.format: YYYY-MMMM-DD 2`] = `null`;

exports[`Test Schema properties.inputStyle: CSS style applied 1`] = `true`;

exports[`Test Schema properties.inputStyle: CSS style applied 2`] = `null`;

exports[`Test Schema properties.label align: right 1`] = `true`;

exports[`Test Schema properties.label align: right 2`] = `null`;

exports[`Test Schema properties.label colon: true 1`] = `true`;

exports[`Test Schema properties.label colon: true 2`] = `null`;

exports[`Test Schema properties.label disabled: true 1`] = `true`;

exports[`Test Schema properties.label disabled: true 2`] = `null`;

exports[`Test Schema properties.label extra: extra text added 1`] = `true`;

exports[`Test Schema properties.label extra: extra text added 2`] = `null`;

exports[`Test Schema properties.label inline: true 1`] = `true`;

exports[`Test Schema properties.label inline: true 2`] = `null`;

exports[`Test Schema properties.label span: 12 1`] = `true`;

exports[`Test Schema properties.label span: 12 2`] = `null`;

exports[`Test Schema properties.placeholder: - Select this Date 1`] = `true`;

exports[`Test Schema properties.placeholder: - Select this Date 2`] = `null`;

exports[`Test Schema properties.showToday: true 1`] = `true`;

exports[`Test Schema properties.showToday: true 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.suffixIcon: CalendarTwoTone 1`] = `true`;

exports[`Test Schema properties.suffixIcon: CalendarTwoTone 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;
